# zerotouch-engine

./: .aidigestignore  .gitignore  README.md  platform.yaml  pyproject.toml  ztc-new.py  ztc.spec
legacy/: pyproject.toml
legacy/ztc/: cli.py  versions.yaml
legacy/ztc/adapters/: base.py
legacy/ztc/adapters/agent-gateway/: adapter.py  config.py
legacy/ztc/adapters/agent-gateway/templates/: application.yaml.j2
legacy/ztc/adapters/agent-sandbox/: adapter.yaml  config.py
legacy/ztc/adapters/agent-sandbox/tests/: test_agent_sandbox_render.py
legacy/ztc/adapters/argocd/templates/: argocd-admin-patch.yaml.j2  kustomization-preview.yaml.j2  overlay-main-kustomization.yaml.j2
legacy/ztc/adapters/argocd/tests/: __init__.py
legacy/ztc/adapters/cilium/: adapter.yaml
legacy/ztc/adapters/cnpg/: __init__.py
legacy/ztc/adapters/crossplane/: __init__.py  config.py
legacy/ztc/adapters/external-dns/: adapter.py  config.py
legacy/ztc/adapters/gateway-api/templates/: env-gateway-config-kustomization.yaml.j2
legacy/ztc/adapters/github/: __init__.py  adapter.py  adapter.yaml  config.py
legacy/ztc/adapters/github/tests/: test_github_init.py  test_github_render.py
legacy/ztc/adapters/keda/: adapter.yaml
legacy/ztc/adapters/keda/templates/: application.yaml.j2
legacy/ztc/adapters/ksops/: adapter.py
legacy/ztc/adapters/ksops/templates/: universal-secret.yaml.j2
legacy/ztc/adapters/ksops/tests/: __init__.py  test_ksops_bootstrap.py  test_ksops_config.py  test_ksops_render.py
legacy/ztc/adapters/talos/scripts/: __init__.py
legacy/ztc/commands/: bootstrap.py  eject.py  validate.py
legacy/ztc/engine/: context.py  engine.py  lock_file.py
legacy/ztc/interfaces/: capabilities.py
legacy/ztc/registry/: __init__.py  versions.py
legacy/ztc/utils/: __init__.py  context_managers.py
legacy/ztc/workflows/: __init__.py  eject.py  init.py
libs/cli/: README.md  __init__.py  core_commands.py  mcp_client.py  pyproject.toml  storage.py  workflow_commands.py
libs/cli/commands/: bootstrap.py  eject.py  init.py  init_old.py  render.py  validate.py
libs/cli/input_handlers/: boolean_handler.py  choice_handler.py  env_file_handler.py  integer_handler.py  json_handler.py
libs/cli/tests/: use_cases.md
libs/cli/tests/integration/: __init__.py
libs/cli/tests/integration/checkpoints/: __init__.py  test_checkpoint_8_cli_end_to_end.py
libs/cli/ztp_cli/: __init__.py  __main__.py  core_commands.py  display.py  engine_bridge.py  workflow_commands.py
libs/cli/ztp_cli/commands/: __init__.py  bootstrap.py  init.py  init_old.py  render.py  sync.py  validate.py
libs/cli/ztp_cli/input_handlers/: __init__.py  choice_handler.py  env_handler.py  json_handler.py  password_handler.py  string_handler.py
libs/workflow_engine/: .gitignore  README.md  __init__.py  pyproject.toml
libs/workflow_engine/adapters/: base.py  dynamic_choices.py  generator.py  operation_mode.py
libs/workflow_engine/adapters/agent-gateway/: adapter.py
libs/workflow_engine/adapters/agent-gateway/tests/: test_agent_gateway_render.py
libs/workflow_engine/adapters/agent-sandbox/: __init__.py  adapter.py
libs/workflow_engine/adapters/agent-sandbox/tests/: test_agent_sandbox_render.py
libs/workflow_engine/adapters/argocd/: adapter.py  adapter.yaml
libs/workflow_engine/adapters/argocd/templates/: bootstrap-config.yaml.j2  kustomization-production.yaml.j2  repo-mount-patch.yaml.j2
libs/workflow_engine/adapters/argocd/tests/: test_argocd_render.py
libs/workflow_engine/adapters/cert-manager/: __init__.py  adapter.py  adapter.yaml
libs/workflow_engine/adapters/cert-manager/templates/: application.yaml.j2
libs/workflow_engine/adapters/cert-manager/tests/: test_cert_manager_render.py
libs/workflow_engine/adapters/cilium/: __init__.py  adapter.py  adapter.yaml
libs/workflow_engine/adapters/cilium/scripts/: __init__.py
libs/workflow_engine/adapters/cilium/tests/: __init__.py  test_cilium_render.py
libs/workflow_engine/adapters/cnpg/: adapter.py
libs/workflow_engine/adapters/cnpg/tests/: __init__.py  test_cnpg_render.py
libs/workflow_engine/adapters/crossplane/: adapter.py  adapter.yaml
libs/workflow_engine/adapters/crossplane/tests/: __init__.py  test_crossplane_render.py
libs/workflow_engine/adapters/external-dns/: adapter.py
libs/workflow_engine/adapters/external-dns/tests/: test_external_dns_render.py
libs/workflow_engine/adapters/gateway-api/: adapter.py  config.py
libs/workflow_engine/adapters/github/: adapter.py
libs/workflow_engine/adapters/hetzner/: __init__.py  adapter.py
libs/workflow_engine/adapters/keda/: __init__.py  adapter.py
libs/workflow_engine/adapters/ksops/: adapter.py  adapter.yaml  output.py
libs/workflow_engine/adapters/nats/: __init__.py  adapter.py  adapter.yaml
libs/workflow_engine/adapters/talos/: adapter.py  adapter.yaml
libs/workflow_engine/core/: __init__.py  automatic_answer.py  observer.py  traverser.py
libs/workflow_engine/engine/: __init__.py  bootstrap_executor.py  context.py  engine.py  init_workflow.py  pipeline_generator.py  script_executor.py
libs/workflow_engine/interfaces/: capabilities.py
libs/workflow_engine/models/: __init__.py  entry.py  feedback.py  level_tracker.py
libs/workflow_engine/parser/: dsl_parser.py
libs/workflow_engine/registry/: adapter_registry.py
libs/workflow_engine/src/workflow_engine/: __init__.py
libs/workflow_engine/storage/: __init__.py
libs/workflow_engine/validation/: __init__.py
libs/workflow_engine/ztc_workflow_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
libs/workflow_mcp/: README.md  __init__.py  __main__.py  pyproject.toml
libs/workflow_mcp/handlers/: __init__.py  adapter_handler.py  bootstrap_handler.py  init_handler.py  init_handler_old.py  platform_handler.py  render_handler.py  validation_handler.py
libs/workflow_mcp/observer/: __init__.py  mcp_observer.py
libs/workflow_mcp/storage/: __init__.py
libs/workflow_mcp/workflow_server/: __init__.py  mcp_server.py  transport_security.py
libs/workflow_mcp/ztc_workflow_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+515 files in other folders)
