[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ztc-workflow-engine"
version = "0.1.0"
description = "ZTC Workflow Engine - Core workflow orchestration and execution"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.15"
keywords = ["workflow", "orchestration", "kubernetes", "gitops", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "jinja2>=3.0.0,<4.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "ruamel-yaml>=0.18.0,<0.19.0",
    "aiohttp>=3.9.0,<4.0.0",
    "cryptography>=42.0.0,<43.0.0",
    "requests>=2.31.0,<3.0.0",
    "pyjwt>=2.8.0,<3.0.0",
    "aiofiles>=24.0.0,<25.0.0",
]

[project.urls]
Repository = "https://github.com/zerotouch/ztc"
Issues = "https://github.com/zerotouch/ztc/issues"

[dependency-groups]
test = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "hypothesis>=6.0.0,<7.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["workflow_engine*"]

[tool.setuptools.package-data]
"*" = ["py.typed", "*.md"]
