[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ztc-workflow-mcp"
version = "0.1.0"
description = "ZTC Workflow MCP Server - Model Context Protocol integration for workflows"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.15"
keywords = ["mcp", "workflow", "protocol", "model-context-protocol", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "ztc-workflow-engine",
    "mcp>=1.26.0,<2.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "aiofiles>=24.0.0,<25.0.0",
]

[project.scripts]
ztc-workflow-server = "workflow_mcp.__main__:main"

[dependency-groups]
test = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["workflow_mcp*"]

[tool.setuptools.package-data]
"*" = ["py.typed", "*.md"]

[tool.uv.sources]
ztc-workflow-engine = { path = "../workflow_engine", editable = true }
